@@ -1,3 +1,9 @@
+Wed Dec 19 21:31:25 EET 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Make sure the warning about error opening a log file is
+	  printed only once and not everytime it fails (produces
+	  too much useless log).  Affected file lib/silcutil/silclog.c.
+
 Mon Dec 17 18:24:27 EET 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed JOIN command parsing not to crash.  Affected file
